syntax = "proto3";
package ollo.market.v1;

import "gogoproto/gogo.proto";
import "ollo/market/v1/params.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/ollo-station/ollo/x/market/types";


option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;

//
message NftListing {
  string id = 1 [
    (gogoproto.moretags) = "yaml:\"id\""
  ];
  string nft_id = 2 [
    (gogoproto.moretags) = "yaml:\"nft_id\""
  ];
  string denom_id = 3 [
    (gogoproto.moretags) = "yaml:\"denom_id\""
  ];
  string creator = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.moretags) = "yaml:\"creator\""
  ];
  cosmos.base.v1beta1.Coin price = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"price\""
  ];
}
